Avoid raw types by using stream collectors
Now the codebase only uses @SuppressWarnings for PMD rules.